# gskeleton

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
gskeleton/: __init__.py  client.py  drive_etl.py  driveetl.py  mime_types.yaml  setup.cfg
gsqletl/: gsqletl.py  math.py
tests/: test_client.py  test_drive_etl.py  test_driveetl.py  test_gsqletl.py  test_init.py  test_toy_examples.py
