[tool.poetry]
name = "gskeleton"
version = "0.1.0"
description = ""
authors = ["John R <JohnREngineer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PyDrive2 = "^1.10.0"
pydantic = "^1.9.0"
gspread = "^5.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
pre-commit = "^2.17.0"
flake8 = "^4.0.1"
black = {version = "^22.1.0", allow-prereleases = true}
mypy = "^0.941"
isort = "^5.10.1"

[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
