[tool.poetry]
name = "gskeleton"
version = "0.1.0"
description = ""
authors = ["John R <JohnREngineer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = ">=2.0.0"
PyDrive2 = "^1.10.0"
pydantic = ">=2.7.4,<3.0.0"
gspread = "^5.2.0"
pandas = ">=2.2.2,<3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^3.0.0"
pre-commit = "^2.20.0"
flake8 = "^4.0.1"
black = {version = "^23.0.0", allow-prereleases = true}
mypy = "^1.2.0"
isort = "^5.12.0"
pytest-mock = "^3.10.0"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"
